--- a/src/Scss/style.scss
+++ b/src/Scss/style.scss
@@ -1,4 +1,8 @@
 @import "config";
+@import "navbar";
+@import "card";
+@import "single";
+@import "footer";
 
 
 html { 
@@ -12,4 +16,10 @@ body {
     font-weight: $ff-semi-bold;
     transition: $transition;
     position: relative;
+}
+
+.min-max-width {
+    width: 95%;
+    max-width: 1300px;
+    margin: 0 auto;
 }
