--- a/src/Scss/_card.scss
+++ b/src/Scss/_card.scss
@@ -1,94 +1,93 @@
-.countries-list-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5rem;
+// ============================== Light Mode ==============================
+.country-card-light {
+    background-color: $white;
+    color: $very-dark-blue;
+    box-shadow: $general-box-shadow;
 
-    .countries-cards-container {
-        @media (min-width: 768px) {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-        }
+    &:hover {
+        box-shadow: $hover-general-box-shadow;
+    }
+}
 
-        @media (min-width: 1000px) {
-            grid-template-columns: repeat(4, 1fr);
-            grid-gap: 4rem;
-        }
+
+
+// ============================== Dark Mode ==============================
+.country-card-dark {
+    background-color: $dark-blue;
+    color: $white;
+    box-shadow: $general-box-shadow;
+
+    &:hover {
+        box-shadow: $hover-general-box-shadow;
+    }
+}
+
+
+
+// ============================== General style ==============================
+.country-card {
+    width: 85%;
+    max-width: 300px;
+    height: 330px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    overflow: hidden;
+    cursor: pointer;
+    transition: $transition;
+
+    @media (min-width: 768px) {
+        width: auto;
+        height: 350px;
     }
 
-    .country-card {
-        background-color: $dark-mode-txt-light-mode-el;
-        height: 350px;
-        box-shadow: $box-shadow;
-        border-radius: 5px;
-        border: none;
-        outline: none;
-        width: 72%;
-        margin-bottom: 2rem;
-        cursor: pointer;
-        transition: $transition;
 
-        &:hover {
-            box-shadow: $hover-box-shadow;
-            transform: scale(0.95);
+    .country-flag-container {
+        height: 50%;
+
+        @media (min-width: 768px) {
+            height: 48%;
+        }
+        @media (min-width: 1000px) {
+            height: 45%;
+        }
+        @media (min-width: 1200px) {
+            height: 42%;
         }
 
         img {
             width: 100%;
-            height: 160px;
-            object-fit: cover;
+            height: 100%;
             border-top-left-radius: 5px;
             border-top-right-radius: 5px;
-            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
         }
+    }
 
+    
+    .country-short-details {
+        padding: 1.2rem 1.1rem 2rem;
 
+        h4 {
+            font-size: 18px;
+            font-weight: $ff-bold;
+            letter-spacing: 0.6px;
+            line-height: 1.2;
+            margin-bottom: 0.8rem;
 
-
-
-        .country-details-sm {
-            padding: 1.2rem 1.5rem 2rem 1.5rem;
-
-            h4 {
+            @media (min-width: 1000px) {
                 margin-bottom: 1rem;
-                font-size: 1.1rem;
-            }
-
-            p {
-                margin-bottom: 0.3rem;
-                font-size: 0.9rem;
-                font-weight: 300;
-                color: $light-mode-input;
-
-                .card-detail-sm {
-                    font-weight: 600;
-                    color: $light-mode-text;
-                }
+                font-size: 1.2rem;
             }
         }
 
 
+        p {
+            font-size: 0.9rem;
+            color: darken($dark-gray, 5%);
+            margin-bottom: 0.4rem;
 
-        @media (min-width: 768px) {
-            width: 75%;
-            height: 360px;
-            margin: 2rem auto;
-        }
-
-        @media (min-width: 1000px) {
-            width: 95%;
-            margin: 1rem auto 0 auto;
-
-            img {
-                height: 150px;
-            }
-
-            .country-details-sm {
-                h4 {
-                    margin-bottom: 1rem;
-                    font-size: 1.2rem;
-                }
+            span {
+                color: $very-dark-blue;
             }
         }
     }
