--- a/src/Scss/_single.scss
+++ b/src/Scss/_single.scss
@@ -1,5 +1,6 @@
-.single-country-wrapper {
+.single-country-info-wrapper {
     // display: none;
+    width: 90%;
     margin: 1.5rem auto;
 
     @media (min-width: 768px) {
@@ -8,7 +9,8 @@
     }
 
     @media (min-width: 1000px) {
-        width: 100%;
+        width: 90%;
+        max-width: 1400px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 8rem;
@@ -16,123 +18,135 @@
         margin: 5rem auto 2rem auto;
     }
 
-    .single-country-container {
-        width: 90%;
-        margin: 2rem auto;
 
-        img {
-            width: 100%;
-            height: 200px;
 
-            @media (min-width: 768px) {
-                width: 100%;
-                height: 230px;
-            }
+
+    // ==================== Country flag. ====================
+    .country-flag {
+        width: 100%;
+        height: 220px;
+
+        @media (min-width: 768px) {
+            height: 250px;
+        }
+
+        @media (min-width: 1000px) {
+            height: 400px;
+        }
+
+        @media (min-width: 1200px) {
+            height: 450px;
+        }
+    }
+
+
+
+
+    // ==================== Country info. ====================
+    .country-info-container {
+        margin-top: 2rem;
+
+        @media (min-width: 1000px) {
+            margin-top: 1rem;
+        }
+
+
+        h3 {
+            font-size: 1.5rem;
+            font-weight: $ff-extra-bold;
+            letter-spacing: 0.6px;
 
             @media (min-width: 1000px) {
-                height: 400px;
-            }
-        }
-
-        .single-country-details {
-            margin-top: 2rem;
-
-            h3 {
-                font-size: 1.3rem;
-
-                @media (min-width: 1000px) {
-                    font-size: 1.7rem;
-                }
-            }
-
-
-            .two-panels {
-                margin: 1rem 0 2rem 0;
-
-                @media (min-width: 1000px) {
-                    display: grid;
-                    grid-template-columns: 1fr 1fr;
-                    margin: 1rem 0 3.5rem 0;
-                }
-
-                p {
-                    font-size: 0.9rem;
-                    color: $light-mode-text;
-                    margin-bottom: 0.2rem;
-
-                    @media (min-width: 1000px) {
-                        font-size: 0.95rem;
-                        margin-bottom: 0.3rem;
-                    }
-                }
-
-                .second-panel {
-                    margin-top: 1.5rem;
-
-                    @media (min-width: 1000px) {
-                        margin-top: 0;
-                    }
-                }
-
-                .country-detail-sm {
-                    color: $light-mode-text;
-                }
+                font-size: 2rem;
             }
         }
 
 
 
+        // Grid info.        
+        .country-info-grid {
+            margin: 1rem 0 2rem 0;
+
+            @media (min-width: 1000px) {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                margin: 1rem 0 3.5rem 0;
+            }
 
 
-        .border-container {
+            p {
+                font-size: 0.95rem;
+                color: darken($light-mode-input, 5%);
+                margin-bottom: 0.2rem;
+
+                span {
+                    color: $light-mode-text;
+                }
+
+                @media (min-width: 1000px) {
+                    font-size: 1rem;
+                    margin-bottom: 0.3rem;
+                }
+            }
+
+
+            .second-grid {
+                margin-top: 1.5rem;
+
+                @media (min-width: 1000px) {
+                    margin-top: 0;
+                }
+            }
+        }
+        
+
+
+
+
+        // ==================== Bordering countries. ====================
+        .border-countries-wrapper {
             @media (min-width: 1000px) {
                 display: flex;
-                justify-content: left;
+                // justify-content: left;
             }
 
 
             h4 {
-                font-size: 0.9rem;
-                margin-bottom: 2rem;
+                font-size: 0.95rem;
+                margin-bottom: 1rem;
 
                 @media (min-width: 1000px) {
+                    font-size: 1rem;
                     margin-bottom: 0;
                     margin-right: 1rem;
                 }
             }
 
-            .border-wrapper {
+
+            .border-countries-container {
                 display: grid;
                 grid-template-columns: repeat(3, 1fr);
-                grid-gap: 1.5rem;
-                margin-top: 1rem;
+                grid-gap: 2rem;
 
-                @media (min-width: 1000px) {
-                    margin-top: 0;
-                }
-
-                .neighbor {
-                    box-shadow: $box-shadow;
-                    color: $light-mode-input;
-                    font-size: 0.8rem;
-                    border-radius: 5px;
-                    border: none;
-                    outline: none;
+                p {
                     background: transparent;
-                    padding: 0.2rem 0.7rem;
-                    cursor: pointer;
+                    color: $light-mode-input;
+                    box-shadow: $box-shadow;
+                    border: none;
+                    border-radius: 5px;
+                    outline: none;
+                    font-size: 0.9rem;
+                    padding: 0.3rem 0.7rem;
                     text-align: center;
+                    cursor: pointer;
                     transition: all 0.2s ease-in-out;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
 
                     &:hover {
                         box-shadow: $hover-box-shadow;
                     }
 
                     @media (min-width: 1000px) {
-                        padding: 0.2rem 1.4rem;
+                        padding: 0.4rem 1.4rem;
                     }
                 }
             }
