--- a/src/Scss/_config.scss
+++ b/src/Scss/_config.scss
@@ -2,8 +2,8 @@
 $white: #ffffff; // Dark mode text & light mode elements
 
 // Dark mode colors.
-$dark-blue: #2b3945; // Dark mode elements.
-$medium-dark-blue: #202c37; // Dark mode background.
+$dark-blue: #25272a; // Dark mode elements.
+$medium-dark-blue: #181818; // Dark mode background.
 
 // Light mode colors.
 $very-light-gray:#fafafa; // Light mode background.
