--- a/src/Scss/mainContentClass.scss
+++ b/src/Scss/mainContentClass.scss
@@ -17,6 +17,7 @@
 
 // ============================== General style ==============================
 .mainContent {
+    position: relative;
     font-size: $home-page-font-size;
     transition: all 0.25s ease-in-out;
 
