--- a/src/Scss/_card.scss
+++ b/src/Scss/_card.scss
@@ -7,6 +7,21 @@
     &:hover {
         box-shadow: $hover-general-box-shadow;
     }
+    
+    .country-short-details {
+        h4 {
+            font-weight: $ff-bold;
+        }
+
+        p {
+            color: $dark-gray;
+            font-weight: $ff-semi-bold;
+
+            span {
+                color: $very-dark-blue;
+            }
+        }
+    }
 }
 
 
@@ -20,14 +35,35 @@
     &:hover {
         box-shadow: $hover-general-box-shadow;
     }
+
+    .country-flag-container {
+        img {
+            filter: brightness(.8) contrast(1.2);
+        }
+    }
+
+    .country-short-details {
+        h4 {
+            font-weight: $ff-semi-bold;
+        }
+
+        p {
+            color: lighten($dark-gray, 20%);
+            font-weight: $fw-light;
+
+            span {
+                color: darken($white, 8%);
+            }
+        }
+    }
 }
 
 
 
 // ============================== General style ==============================
 .country-card {
-    width: 85%;
-    max-width: 300px;
+    width: 77%;
+    max-width: 280px;
     height: 330px;
     border: none;
     border-radius: 5px;
@@ -37,23 +73,17 @@
     transition: $transition;
 
     @media (min-width: 768px) {
-        width: auto;
-        height: 350px;
+        width: 100%;
+        max-width: 290px;
+    }
+    @media (min-width: 1000px) {
+        height: 340px;
     }
 
 
     .country-flag-container {
-        height: 50%;
-
-        @media (min-width: 768px) {
-            height: 48%;
-        }
-        @media (min-width: 1000px) {
-            height: 45%;
-        }
-        @media (min-width: 1200px) {
-            height: 42%;
-        }
+        height: 45%;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 
         img {
             width: 100%;
@@ -65,14 +95,13 @@
 
     
     .country-short-details {
-        padding: 1.2rem 1.1rem 2rem;
+        padding: 1.7rem;
 
         h4 {
-            font-size: 18px;
-            font-weight: $ff-bold;
+            font-size: 1.188rem;
             letter-spacing: 0.6px;
-            line-height: 1.2;
-            margin-bottom: 0.8rem;
+            line-height: 1.3;
+            margin-bottom: 1rem;
 
             @media (min-width: 1000px) {
                 margin-bottom: 1rem;
@@ -83,11 +112,15 @@
 
         p {
             font-size: 0.9rem;
-            color: darken($dark-gray, 5%);
-            margin-bottom: 0.4rem;
+            letter-spacing: 0.6px;
+            margin-bottom: 0.6rem;
+
+            @media (min-width: 1000px) {
+                margin-bottom: 0.75rem;
+            }
 
             span {
-                color: $very-dark-blue;
+                font-size: 0.92rem;
             }
         }
     }
