--- a/src/Scss/style.css
+++ b/src/Scss/style.css
@@ -12,7 +12,7 @@
 }
 
 .navbar-wrapper-dark {
-  background-color: #2b3945;
+  background-color: #25272a;
   color: #ffffff;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
           box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
@@ -118,8 +118,21 @@
           box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
+.country-card-light .country-short-details h4 {
+  font-weight: 800;
+}
+
+.country-card-light .country-short-details p {
+  color: #858585;
+  font-weight: 600;
+}
+
+.country-card-light .country-short-details p span {
+  color: #111517;
+}
+
 .country-card-dark {
-  background-color: #2b3945;
+  background-color: #25272a;
   color: #ffffff;
   -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
           box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -130,9 +143,27 @@
           box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
+.country-card-dark .country-flag-container img {
+  -webkit-filter: brightness(0.8) contrast(1.2);
+          filter: brightness(0.8) contrast(1.2);
+}
+
+.country-card-dark .country-short-details h4 {
+  font-weight: 600;
+}
+
+.country-card-dark .country-short-details p {
+  color: #b8b8b8;
+  font-weight: 300;
+}
+
+.country-card-dark .country-short-details p span {
+  color: #ebebeb;
+}
+
 .country-card {
-  width: 85%;
-  max-width: 300px;
+  width: 77%;
+  max-width: 280px;
   height: 330px;
   border: none;
   border-radius: 5px;
@@ -145,31 +176,21 @@
 
 @media (min-width: 768px) {
   .country-card {
-    width: auto;
-    height: 350px;
-  }
-}
-
-.country-card .country-flag-container {
-  height: 50%;
-}
-
-@media (min-width: 768px) {
-  .country-card .country-flag-container {
-    height: 48%;
+    width: 100%;
+    max-width: 290px;
   }
 }
 
 @media (min-width: 1000px) {
-  .country-card .country-flag-container {
-    height: 45%;
+  .country-card {
+    height: 340px;
   }
 }
 
-@media (min-width: 1200px) {
-  .country-card .country-flag-container {
-    height: 42%;
-  }
+.country-card .country-flag-container {
+  height: 45%;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 .country-card .country-flag-container img {
@@ -180,15 +201,14 @@
 }
 
 .country-card .country-short-details {
-  padding: 1.2rem 1.1rem 2rem;
+  padding: 1.7rem;
 }
 
 .country-card .country-short-details h4 {
-  font-size: 18px;
-  font-weight: 800;
+  font-size: 1.188rem;
   letter-spacing: 0.6px;
-  line-height: 1.2;
-  margin-bottom: 0.8rem;
+  line-height: 1.3;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 1000px) {
@@ -200,12 +220,18 @@
 
 .country-card .country-short-details p {
   font-size: 0.9rem;
-  color: #787878;
-  margin-bottom: 0.4rem;
+  letter-spacing: 0.6px;
+  margin-bottom: 0.6rem;
+}
+
+@media (min-width: 1000px) {
+  .country-card .country-short-details p {
+    margin-bottom: 0.75rem;
+  }
 }
 
 .country-card .country-short-details p span {
-  color: #111517;
+  font-size: 0.92rem;
 }
 
 .search-dropDown-container-light .search-by-name-wrapper {
@@ -256,7 +282,7 @@
 }
 
 .search-dropDown-container-dark .search-by-name-wrapper {
-  background-color: #2b3945;
+  background-color: #25272a;
   color: #ffffff;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
           box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
@@ -272,11 +298,11 @@
 }
 
 .search-dropDown-container-dark .dropDown-wrapper {
-  background-color: #2b3945;
+  background-color: #25272a;
 }
 
 .search-dropDown-container-dark .dropDown-wrapper .dropDown-region-btn {
-  background-color: #2b3945;
+  background-color: #25272a;
   color: #ffffff;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
           box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
@@ -288,7 +314,7 @@
 }
 
 .search-dropDown-container-dark .dropDown-wrapper .regions-menu {
-  background-color: #2b3945;
+  background-color: #25272a;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
           box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
 }
@@ -546,6 +572,52 @@
 
 body {
   font-family: "Nunito Sans", sans-serif;
+  scroll-behavior: smooth;
+}
+
+.load-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  background: rgba(0, 0, 0, 0.8);
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 2.5rem;
+  font-weight: 800;
+  letter-spacing: 4px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+@media (min-width: 768px) {
+  .load-wrapper {
+    font-size: 3rem;
+  }
+}
+
+.btn-backTop {
+  position: fixed;
+  bottom: 5%;
+  right: 2%;
+  cursor: pointer;
+}
+
+.btn-backTop .scroll-btn {
+  font-size: 2rem;
+  color: #0ab378;
 }
 
 .mainContent-light {
@@ -554,11 +626,12 @@ body {
 }
 
 .mainContent-dark {
-  background-color: #202c37;
+  background-color: #181818;
   color: #ffffff;
 }
 
 .mainContent {
+  position: relative;
   font-size: 14px;
   -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
@@ -641,7 +714,7 @@ body {
 }
 
 .single-country-btns-dark .button {
-  background-color: #2b3945;
+  background-color: #25272a;
   color: #ffffff;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
           box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
@@ -675,6 +748,14 @@ body {
   transition: all 0.25s ease-in-out;
 }
 
+.single-country-big-wrapper-light .other-details-wrapper h3 {
+  font-weight: 800;
+}
+
+.single-country-big-wrapper-light .other-details-wrapper .two-panels-container p {
+  font-weight: 600;
+}
+
 .single-country-big-wrapper-light .other-details-wrapper .two-panels-container p span {
   color: #111517;
 }
@@ -683,6 +764,7 @@ body {
   background-color: #ffffff;
   -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
           box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  color: #6c6c6c;
 }
 
 .single-country-big-wrapper-light .other-details-wrapper .border-wrapper .borders-countires p:hover {
@@ -690,14 +772,30 @@ body {
           box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
+.single-country-big-wrapper-dark .country-flag img {
+  -webkit-filter: brightness(0.8) contrast(1.2);
+          filter: brightness(0.8) contrast(1.2);
+}
+
+.single-country-big-wrapper-dark .other-details-wrapper h3 {
+  color: #e1e1e1;
+  font-weight: 600;
+}
+
+.single-country-big-wrapper-dark .other-details-wrapper .two-panels-container p {
+  color: #b8b8b8;
+  font-weight: 300;
+}
+
 .single-country-big-wrapper-dark .other-details-wrapper .two-panels-container p span {
-  color: #ffffff;
+  color: #ebebeb;
 }
 
 .single-country-big-wrapper-dark .other-details-wrapper .border-wrapper .borders-countires p {
-  background-color: #2b3945;
+  background-color: #25272a;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
           box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px 0px;
+  color: #9f9f9f;
 }
 
 .single-country-big-wrapper-dark .other-details-wrapper .border-wrapper .borders-countires p:hover {
@@ -716,7 +814,7 @@ body {
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   .single-country-big-wrapper {
     width: 100%;
     display: -ms-grid;
@@ -730,18 +828,14 @@ body {
 
 .single-country-big-wrapper .country-flag {
   width: 100%;
-  height: 190px;
+  height: 200px;
+  -webkit-box-shadow: rgba(10, 10, 10, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+          box-shadow: rgba(10, 10, 10, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 520px) {
   .single-country-big-wrapper .country-flag {
-    height: 230px;
-  }
-}
-
-@media (min-width: 768px) {
-  .single-country-big-wrapper .country-flag {
-    height: 250px;
+    height: 300px;
   }
 }
 
@@ -757,25 +851,19 @@ body {
 }
 
 .single-country-big-wrapper .other-details-wrapper {
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
-@media (min-width: 768px) {
-  .single-country-big-wrapper .other-details-wrapper {
-    margin-top: 2.5rem;
-  }
-}
-
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   .single-country-big-wrapper .other-details-wrapper {
     margin-top: 1rem;
   }
 }
 
 .single-country-big-wrapper .other-details-wrapper h3 {
-  font-size: 1.6rem;
-  font-weight: 800;
+  font-size: 1.7rem;
   letter-spacing: 0.7px;
+  line-height: 1.3;
 }
 
 @media (min-width: 768px) {
@@ -801,53 +889,46 @@ body {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    margin: 2rem 0 3.5rem 0;
+    gap: 2rem;
+    margin: 2rem 0 5rem 0;
   }
 }
 
 .single-country-big-wrapper .other-details-wrapper .two-panels-container p {
   font-size: 0.9rem;
-  font-weight: 600;
   color: #858585;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.75rem;
   letter-spacing: 0.5px;
+  line-height: 1.3;
 }
 
 @media (min-width: 1000px) {
   .single-country-big-wrapper .other-details-wrapper .two-panels-container p {
     font-size: 0.95rem;
     margin-bottom: 0.8rem;
+    line-height: 1.4;
   }
 }
 
 .single-country-big-wrapper .other-details-wrapper .two-panels-container p span {
+  font-size: 0.92rem;
   margin-right: 0.15rem;
 }
 
 @media (min-width: 1000px) {
   .single-country-big-wrapper .other-details-wrapper .two-panels-container p span {
     margin-right: 0.2rem;
+    font-size: 0.97rem;
   }
 }
 
 .single-country-big-wrapper .other-details-wrapper .two-panels-container .second-panel {
-  margin-top: 1.5rem;
+  margin-top: 2rem;
 }
 
 @media (min-width: 1000px) {
   .single-country-big-wrapper .other-details-wrapper .two-panels-container .second-panel {
     margin-top: 0rem;
-  }
-}
-
-@media (min-width: 1000px) {
-  .single-country-big-wrapper .other-details-wrapper .border-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
 }
 
@@ -860,7 +941,6 @@ body {
 
 @media (min-width: 1000px) {
   .single-country-big-wrapper .other-details-wrapper .border-wrapper h4 {
-    margin-bottom: 0;
     margin-right: 2rem;
   }
 }
@@ -876,11 +956,20 @@ body {
 @media (min-width: 1000px) {
   .single-country-big-wrapper .other-details-wrapper .border-wrapper .borders-countires {
     margin-top: 0;
+    grid-gap: 2rem;
   }
 }
 
 .single-country-big-wrapper .other-details-wrapper .border-wrapper .borders-countires p {
-  color: #858585;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 0.75rem;
   font-weight: 600;
   letter-spacing: 0.5px;
@@ -896,7 +985,7 @@ body {
 
 @media (min-width: 1000px) {
   .single-country-big-wrapper .other-details-wrapper .border-wrapper .borders-countires p {
-    padding: 0.4rem 1.4rem;
+    padding: 0.65rem 1.4rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
